# devportfolio

./: .dockerignore  .gitignore  .htaccess  .project  CHANGELOG.md  CLAUDE.md  CNAME  Dockerfile  LICENSE.md  My Portfolio.html  Procfile  README.md  README.txt  Resume - Current.docx  SeleniumScripts.side  _config.yml  _redirects  aboutme.html  aboutme2.html  app.py  astro.config.mjs  config.toml  contact.html  copy.sh  experience.html  file12  fireworks.css  fireworks.js  gulpfile.js  gunicorn_config.py  index (1).html  index copy.html  index-default.html  index.html  index2.html  nor-rom.html  package-lock.json  package.json  pollocks-demo.html  pollocks.html  (+16 more)
.cursor/: rules
.do/: app.yaml  deploy.template.yaml
.github/workflows/: deploy.yml  (+1 more)
My Portfolio_files/: css
StartNoLightOnlyDebt/: .env
_layouts/: home.html
_posts/: 2017-12-24-welcome-to-jekyll.markdown  book_list.html
_site/: LICENSE.md  README.md  gulpfile.js  index.html  package.json
backend/: hello.py
blog/: _config.yml  index.html
css/: bootstrap.min.css  main.css  style.css  style.min.css  styles copy.css  styles.css  styles.css.map
cv/: index.html
favicons/: site.webmanifest
files/: resume.docx
js/: custom.js  index.js  jquery.instagramFeed.js  jquery.instagramFeed.min.js  scripts.js  scripts.min.js  slider.js  wow.min.js
public/: 404.html  CNAME  index.html  index.xml  sitemap.xml
resume/: resume_HyunbinLee.doc
scripts/: sync
scss/: _global.scss  _mixins.scss  _nav.scss  _resume-item.scss  main.scss  resume.scss  styles.scss
src/: config.ts
templates/: index.html
(+144 files in other folders)
