[tool.poetry]
name = "portfolio-project"
version = "0.1.0"
description = ""
authors = ["Oskar Duda <oskar.duda.pl@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"